plugins/kotlin/idea/tests/testData/multiModuleHighlighting/multiplatform/basic/jvm/jvm.kt
actual class <error descr="[ACTUAL_WITHOUT_EXPECT]">Your</error> {

}

expect class <error descr="[NO_ACTUAL_FOR_EXPECT]">His</error> {

}

actual class Their {

}
